[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scripts/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnNode" type="Node2D" parent="."]

[node name="inBetweenTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="inBetweenTimer" to="." method="_on_inBetweenTimer_timeout"]
